logs/sensor_network-expanded.h

typedef unsigned char __uint8_t;
typedef short unsigned int __uint16_t;
typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
#define bool _Bool
void os_init(int (*fn)(int argc, char **argv));
typedef int (cbor_encoder_write)(struct cbor_encoder_writer *, const char *data, int len);
typedef uint8_t (cbor_reader_get8)(struct cbor_decoder_reader *d, int offset);
typedef uint16_t (cbor_reader_get16)(struct cbor_decoder_reader *d, int offset);
struct sensor_value {
    const char *key;
    int val_type;
    uint16_t int_val;
    float float_val;
};
struct oc_server_handle;
    init_sensor_post(struct oc_server_handle *server, const char *uri, int coap_content_format);
    do_sensor_post(void);
#define SENSOR_NETWORK_SIZE 5
struct sensor_network_interface {
    uint8_t iface_type;
    const char *network_device;
    uint8_t server_endpoint_size;
    int (*register_transport_func)(const char *network_device, void *server_endpoint, const char *host, uint16_t port, uint8_t server_endpoint_size);
    uint8_t transport_registered;
};
struct sensor_value;
int register_server_transport(void);
int register_collector_transport(void);
int sensor_network_register_transport(uint8_t iface_type);
    init_server_post(const char *uri);
    init_collector_post(void);
    sensor_network_init_post(uint8_t iface_type, const char *uri);
    do_server_post(void);
    do_collector_post(void);
    sensor_network_do_post(uint8_t iface_type);
    is_collector_node(void);
    is_sensor_node(void);
    is_standalone_node(void);
    should_send_to_collector(struct sensor_value *val, const char *device_name);
const char *get_device_id(void);
void sensor_network_init(void);
int sensor_network_register_interface(const struct sensor_network_interface *iface);
struct sensor_network_endpoint {
    uint8_t endpoint[16];
};
static struct sensor_network_interface sensor_network_interfaces[2];
static struct sensor_network_endpoint sensor_network_endpoints[2];
int register_server_transport(void) {

    uint8_t i = 0;
    int rc = sensor_network_register_transport(i);
    ((rc == 0) ? (void)0 : __assert_func(
# 131 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 131 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 131 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 131 "libs/sensor_network/src/sensor_network.c"
   , 
# 131 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 131 "libs/sensor_network/src/sensor_network.c"
   ));
    return rc;
}
int register_collector_transport(void) {

    uint8_t i = 1;
    int rc = sensor_network_register_transport(i);
    ((rc == 0) ? (void)0 : __assert_func(
# 139 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 139 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 139 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 139 "libs/sensor_network/src/sensor_network.c"
   , 
# 139 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 139 "libs/sensor_network/src/sensor_network.c"
   ));
    return rc;
}
int sensor_network_register_transport(uint8_t iface_type) {

    ((iface_type >= 0 && iface_type < 2) ? (void)0 : __assert_func(
# 145 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 145 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 145 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 145 "libs/sensor_network/src/sensor_network.c"
   , 
# 145 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 145 "libs/sensor_network/src/sensor_network.c"
   ));
    struct sensor_network_interface *iface = &sensor_network_interfaces[iface_type];
    if (iface->transport_registered) { return 0; }

    void *endpoint = &sensor_network_endpoints[iface_type];

    ((iface->network_device) ? (void)0 : __assert_func(
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
   , 
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
   )); ((iface->register_transport_func) ? (void)0 : __assert_func(
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
                                   , 0, 
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
                                   , 
# 151 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 151 "libs/sensor_network/src/sensor_network.c"
                                   ));
    const char *network_device = iface->network_device;
    console_printf("%s%s %s\n", _net, sensor_network_shortname[iface_type], network_device);


    int rc = iface->register_transport_func(network_device, endpoint, COAP_HOST, (5683), 16);
    ((rc == 0) ? (void)0 : __assert_func(
# 157 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 157 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 157 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 157 "libs/sensor_network/src/sensor_network.c"
   , 
# 157 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 157 "libs/sensor_network/src/sensor_network.c"
   ));
    iface->transport_registered = 1;
    return rc;
}
    init_server_post(const char *uri) {



    uint8_t i = 0;
    
# 170 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 170 "libs/sensor_network/src/sensor_network.c"
        status = sensor_network_init_post(i, uri);
    ((status) ? (void)0 : __assert_func(
# 171 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 171 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 171 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 171 "libs/sensor_network/src/sensor_network.c"
   , 
# 171 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 171 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    init_collector_post(void) {



    uint8_t i = 1;
    const char *uri = 
# 180 "libs/sensor_network/src/sensor_network.c" 3 4
                     ((void *)0)
# 180 "libs/sensor_network/src/sensor_network.c"
                         ;
    
# 181 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 181 "libs/sensor_network/src/sensor_network.c"
        status = sensor_network_init_post(i, uri);
    ((status) ? (void)0 : __assert_func(
# 182 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 182 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 182 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 182 "libs/sensor_network/src/sensor_network.c"
   , 
# 182 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 182 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    sensor_network_init_post(uint8_t iface_type, const char *uri) {



    if (uri == 
# 190 "libs/sensor_network/src/sensor_network.c" 3 4
              ((void *)0)
# 190 "libs/sensor_network/src/sensor_network.c"
                  ) { uri = COAP_URI; }
    ((uri) ? (void)0 : __assert_func(
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
   , 
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
   )); ((iface_type >= 0 && iface_type < 2) ? (void)0 : __assert_func(
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
                 ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
                 , 0, 
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
                 ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
                 , 
# 191 "libs/sensor_network/src/sensor_network.c" 3 4
                 ((void *)0)
# 191 "libs/sensor_network/src/sensor_network.c"
                 ));
    struct sensor_network_interface *iface = &sensor_network_interfaces[iface_type];
    ((iface->network_device) ? (void)0 : __assert_func(
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
   , 
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
   )); ((iface->register_transport_func) ? (void)0 : __assert_func(
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
                                   , 0, 
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
                                   , 
# 193 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 193 "libs/sensor_network/src/sensor_network.c"
                                   ));
    void *endpoint = &sensor_network_endpoints[iface_type];
    int encoding = sensor_network_encoding[iface_type];
    if (!iface->transport_registered) {

        int rc = sensor_network_register_transport(iface_type);
        ((rc == 0) ? (void)0 : __assert_func(
# 199 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 199 "libs/sensor_network/src/sensor_network.c"
       , 0, 
# 199 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 199 "libs/sensor_network/src/sensor_network.c"
       , 
# 199 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 199 "libs/sensor_network/src/sensor_network.c"
       ));
    }
    
# 201 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 201 "libs/sensor_network/src/sensor_network.c"
        status = init_sensor_post(endpoint, uri, encoding);
    ((status) ? (void)0 : __assert_func(
# 202 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 202 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 202 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 202 "libs/sensor_network/src/sensor_network.c"
   , 
# 202 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 202 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    do_server_post(void) {



    uint8_t i = 0;
    
# 217 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 217 "libs/sensor_network/src/sensor_network.c"
        status = sensor_network_do_post(i);
    ((status) ? (void)0 : __assert_func(
# 218 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 218 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 218 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 218 "libs/sensor_network/src/sensor_network.c"
   , 
# 218 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 218 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    do_collector_post(void) {



    uint8_t i = 1;
    
# 227 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 227 "libs/sensor_network/src/sensor_network.c"
        status = sensor_network_do_post(i);
    ((status) ? (void)0 : __assert_func(
# 228 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 228 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 228 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 228 "libs/sensor_network/src/sensor_network.c"
   , 
# 228 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 228 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    sensor_network_do_post(uint8_t iface_type) {



    ((iface_type >= 0 && iface_type < 2) ? (void)0 : __assert_func(
# 236 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 236 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 236 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 236 "libs/sensor_network/src/sensor_network.c"
   , 
# 236 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 236 "libs/sensor_network/src/sensor_network.c"
   ));
    
# 237 "libs/sensor_network/src/sensor_network.c" 3 4
   _Bool 
# 237 "libs/sensor_network/src/sensor_network.c"
        status = do_sensor_post();
    ((status) ? (void)0 : __assert_func(
# 238 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 238 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 238 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 238 "libs/sensor_network/src/sensor_network.c"
   , 
# 238 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 238 "libs/sensor_network/src/sensor_network.c"
   ));
    return status;
}
    is_collector_node(void) {




    const uint8_t *hardware_id = get_hardware_id();

    if (memcmp(hardware_id, COLLECTOR_NODE_HW_ID, 12) == 0) { return 
# 252 "libs/sensor_network/src/sensor_network.c" 3 4
                                                                                    1
# 252 "libs/sensor_network/src/sensor_network.c"
                                                                                        ; }
    return 
# 253 "libs/sensor_network/src/sensor_network.c" 3 4
          0
# 253 "libs/sensor_network/src/sensor_network.c"
               ;
}
    is_sensor_node(void) {


    if (sensor_node_address) { return 
# 259 "libs/sensor_network/src/sensor_network.c" 3 4
                                     1
# 259 "libs/sensor_network/src/sensor_network.c"
                                         ; }
    return 
# 260 "libs/sensor_network/src/sensor_network.c" 3 4
          0
# 260 "libs/sensor_network/src/sensor_network.c"
               ;
}
    is_standalone_node(void) {

    if (!is_collector_node() && !is_sensor_node()) { return 
# 265 "libs/sensor_network/src/sensor_network.c" 3 4
                                                           1
# 265 "libs/sensor_network/src/sensor_network.c"
                                                               ; }
    return 
# 266 "libs/sensor_network/src/sensor_network.c" 3 4
          0
# 266 "libs/sensor_network/src/sensor_network.c"
               ;
}
    should_send_to_collector(struct sensor_value *val, const char *device_name) {

    ((val) ? (void)0 : __assert_func(
# 271 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 271 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 271 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 271 "libs/sensor_network/src/sensor_network.c"
   , 
# 271 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 271 "libs/sensor_network/src/sensor_network.c"
   ));
    if (is_sensor_node()) { return 
# 272 "libs/sensor_network/src/sensor_network.c" 3 4
                                  1
# 272 "libs/sensor_network/src/sensor_network.c"
                                      ; }
    return 
# 273 "libs/sensor_network/src/sensor_network.c" 3 4
          0
# 273 "libs/sensor_network/src/sensor_network.c"
               ;
}
const char *get_device_id(void) {

    if (device_id_text[0]) { return device_id_text; }


    int rc = hmac_prng_generate(device_id, 16); ((rc == 0) ? (void)0 : __assert_func(
# 295 "libs/sensor_network/src/sensor_network.c" 3 4
                                                              ((void *)0)
# 295 "libs/sensor_network/src/sensor_network.c"
                                                              , 0, 
# 295 "libs/sensor_network/src/sensor_network.c" 3 4
                                                              ((void *)0)
# 295 "libs/sensor_network/src/sensor_network.c"
                                                              , 
# 295 "libs/sensor_network/src/sensor_network.c" 3 4
                                                              ((void *)0)
# 295 "libs/sensor_network/src/sensor_network.c"
                                                              ));
    char *s = device_id_text; int i;

    for (i = 0; i < 16; i++) {
        sprintf(s, "%02x", device_id[i]);
        s += 2;
    }
    device_id_text[(1 + 16 * 2) - 1] = 0;
    console_printf("%srandom device id %s\n", _net, device_id_text);




    return device_id_text;
}
void sensor_network_init(void) {



    for (int i = 0; i < 5; i++) {
        int len = sprintf((char *) sensor_node_names[i], "%010llx", sensor_node_addresses[i]);
        ((len + 1 <= 11) ? (void)0 : __assert_func(
# 332 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 332 "libs/sensor_network/src/sensor_network.c"
       , 0, 
# 332 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 332 "libs/sensor_network/src/sensor_network.c"
       , 
# 332 "libs/sensor_network/src/sensor_network.c" 3 4
       ((void *)0)
# 332 "libs/sensor_network/src/sensor_network.c"
       ));
    }

    const uint8_t *hardware_id = get_hardware_id();
    int i;
    for (i = 0; i < 5; i++) {
        if (memcmp(hardware_id, SENSOR_NODE_HW_IDS[i], 12) == 0) {
            sensor_node_address = sensor_node_addresses[i];
            console_printf("%ssensor%s#%d\n", _net, _node, i + 1);
            break;
        }
    }

    if (is_collector_node()) { console_printf("%scollector%s\n", _net, _node); }
    else if (is_standalone_node()) { console_printf("%sstandalone%s\n", _net, _node); }
}
int sensor_network_register_interface(const struct sensor_network_interface *iface) {

    ((iface) ? (void)0 : __assert_func(
# 351 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 351 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 351 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 351 "libs/sensor_network/src/sensor_network.c"
   , 
# 351 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 351 "libs/sensor_network/src/sensor_network.c"
   ));
    uint8_t i = iface->iface_type; ((i >= 0 && i < 2) ? (void)0 : __assert_func(
# 352 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 352 "libs/sensor_network/src/sensor_network.c"
                                   , 0, 
# 352 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 352 "libs/sensor_network/src/sensor_network.c"
                                   , 
# 352 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 352 "libs/sensor_network/src/sensor_network.c"
                                   ));
    ((iface->network_device) ? (void)0 : __assert_func(
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
   , 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
   )); ((iface->server_endpoint_size) ? (void)0 : __assert_func(
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                   , 0, 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                   , 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                   ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                   )); ((iface->register_transport_func) ? (void)0 : __assert_func(
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                                                         ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                                                         , 0, 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                                                         ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                                                         , 
# 353 "libs/sensor_network/src/sensor_network.c" 3 4
                                                                         ((void *)0)
# 353 "libs/sensor_network/src/sensor_network.c"
                                                                         ));
    ((iface->server_endpoint_size <= 16) ? (void)0 : __assert_func(
# 354 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 354 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 354 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 354 "libs/sensor_network/src/sensor_network.c"
   , 
# 354 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 354 "libs/sensor_network/src/sensor_network.c"
   ));
    ((sensor_network_interfaces[i].network_device == 
# 355 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 355 "libs/sensor_network/src/sensor_network.c"
   ) ? (void)0 : __assert_func(
# 355 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 355 "libs/sensor_network/src/sensor_network.c"
   , 0, 
# 355 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 355 "libs/sensor_network/src/sensor_network.c"
   , 
# 355 "libs/sensor_network/src/sensor_network.c" 3 4
   ((void *)0)
# 355 "libs/sensor_network/src/sensor_network.c"
   ));
    memcpy(&sensor_network_interfaces[i], iface, sizeof(struct sensor_network_interface));
    sensor_network_interfaces[i].transport_registered = 0;
    console_printf("%s%s %s\n", _net, sensor_network_shortname[i], sensor_network_interfaces[i].network_device);
    return 0;
}